# atoms-plus

./: .cursorignore  .gitignore  .railway-trigger  CLAUDE.md  DEMO_DOCUMENTATION.md  GEMINI.md  OPENHANDS_CAPABILITIES_ANALYSIS.md  README.md  config.atoms-plus.toml  current-tools-area.md  nixpacks.toml  pyproject.toml  railway.toml  start-backend.sh  team_mode.db  toolcall-ui-demo.html  typing-indicator-demo.html
atoms_plus/: README.md  __init__.py  atoms_server.py  pyproject.toml
atoms_plus/deep_research/: CLAUDE.md  __init__.py  api.py  e2e_test.py  models.py  prompts.py  query_rewriter.py  research.py  search.py
atoms_plus/frontend/: README.md  index.ts
atoms_plus/frontend/api/: race-service.ts
atoms_plus/frontend/components/: RaceMode.tsx  RoleSelector.tsx
atoms_plus/orchestrator/: __init__.py  api.py  dispatcher.py  multi_agent.py  result_aggregator.py  tools.py
atoms_plus/project_graph/: __init__.py  generator.py  models.py  test_generator.py
atoms_plus/race_mode/: __init__.py  api.py  coordinator.py  result_selector.py
atoms_plus/roles/: __init__.py  api.py  base.py  integration.py  llm_router.py  registry.py  router.py  vibe_coding_instructions.py
atoms_plus/roles/config/: agents.yaml
atoms_plus/roles/prompts/: architect.j2  data_analyst.j2  engineer.j2  (+5 more)
atoms_plus/scaffolding/: __init__.py  api.py  generator.py  models.py  orchestration.py  presets_registry.py  templates_registry.py
atoms_plus/team_mode/: __init__.py  api.py  e2e_test.py  graph.py  router.py  state.py
atoms_plus/warm_pool/: __init__.py  api.py  manager.py  models.py
(+501 files in other folders)
