[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atoms-plus-cli"
version = "0.3.0"
description = "Atoms Plus - Local Development CLI for OpenHands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Atoms Plus", email = "atoms@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Minimal dependencies - uses parent project's venv
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
atoms = "team_mode.e2e_test:main"

[project.urls]
Homepage = "https://github.com/Alenryuichi/atoms-plus"
Repository = "https://github.com/Alenryuichi/atoms-plus"

[tool.setuptools]
packages = ["team_mode", "race_mode", "roles", "scaffolding", "project_graph"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

